<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#fff"
        app:title="@string/nova_tarefa"
        />

    <TextView
        android:id="@+id/text_view_descricao"
        android:text="@string/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_margin="12dp"
        />

    <EditText
        android:layout_margin="12dp"
        android:id="@+id/edit_text_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_descricao"
        />

    <TextView
        android:layout_margin="12dp"
        android:id="@+id/text_view_categoria"
        android:text="@string/categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_descricao"
        />

    <Spinner
        android:layout_margin="12dp"
        android:id="@+id/spinner_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_categoria"
        />

        <Button
            android:id="@+id/button_salvar"
            android:text="@string/salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/button_excluir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_categoria"
            android:layout_margin="12dp"
            />

        <Button
            android:id="@+id/button_excluir"
            android:layout_weight="1"
            android:text="@string/excluir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/design_default_color_error"
            app:layout_constraintTop_toBottomOf="@id/spinner_categoria"
            app:layout_constraintStart_toEndOf="@+id/button_salvar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp"
            />

</androidx.constraintlayout.widget.ConstraintLayout>